version/0.1/_sources/api/ansys/sam/sysml2/classes/index.rst.txt






The ``classes`` package
===========================

.. py:module:: ansys.sam.sysml2.classes


Summary
-------








.. py:currentmodule:: classes
.. tab-set::


    .. tab-item:: Submodules

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~ansys.sam.sysml2.classes.http_request`
            - Store all information and create new requests.


          * - :py:obj:`~ansys.sam.sysml2.classes.mapped_element`
            - Mapped element class.


          * - :py:obj:`~ansys.sam.sysml2.classes.project`
            - Project interface for users.


          * - :py:obj:`~ansys.sam.sysml2.classes.sysml_element`
            - Python base class for SysML elements.


          * - :py:obj:`~ansys.sam.sysml2.classes.unresolved_field`
            - Unresolved field class.












.. toctree::
   :titlesonly:
   :maxdepth: 1
   :hidden:

    <span class="nf nf-fa-file"></span> http_request</api/ansys/sam/sysml2/classes/http_request/index>
    <span class="nf nf-fa-file"></span> mapped_element</api/ansys/sam/sysml2/classes/mapped_element/index>
    <span class="nf nf-fa-file"></span> project</api/ansys/sam/sysml2/classes/project/index>
    <span class="nf nf-fa-file"></span> sysml_element</api/ansys/sam/sysml2/classes/sysml_element/index>
    <span class="nf nf-fa-file"></span> unresolved_field</api/ansys/sam/sysml2/classes/unresolved_field/index>











Description
-----------


Classes module for PySAM SysML2.
















..
    !! processed by numpydoc !!





